# vk_proff

./: Dockerfile  README.md  pyproject.toml  start.txt
alembic/: env.py
alembic/versions/: 01_initial_structure1.py
app/: main.py
app/api/: routers.py  validators.py
app/api/endpoints/: user.py
app/core/: base.py  config.py  database.py
app/crud/: base.py  user.py
app/models/: user.py  users.py
app/schemas/: user.py
app/tests/: conftest.py  test_user.py
infraa/: docker-compose.yaml
