[tool.poetry]
name = "vk-proff"
version = "0.1.0"
description = ""
authors = ["Teijio <ridpfrep@yandex.ru>"]
readme = "README.md"

[tool.black]
line-length = 119
exclude = '''
    ^/.github
    | ^/infra
    | .*/migrations
    | .*/settings/
    | ^settings.py
    | ^/venv
    | ^/.venv
    | ^/.env
'''

[tool.poetry.dependencies]
python = "^3.12.2"
fastapi = {extras = ["all"], version = "^0.110.3"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
isort = "^5.13.2"
pytest = "^8.2.0"
sqlalchemy-utils = "^0.41.2"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
